# tp-folder-dl

./: CHANGES.txt  LICENSE.txt  README.md  pyproject.toml
src/tp_folder_dl/: __about__.py  __init__.py
tests/: test_dl.py  test_glob.py  test_parse.py
tp_folder_dl/: __about__.py  __init__.py  __main__.py  tp_folder_dl.py
